--- a/practical_17_1.ipynb
+++ b/practical_17_1.ipynb
@@ -4,13 +4,115 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.12.4' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/opt/homebrew/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "# Importing necessary libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, confusion_matrix, classification_report\n",
+    "\n",
+    "# Load the dataset\n",
+    "df = pd.read_csv('bank-full.csv', sep=';')\n",
+    "\n",
+    "# Exploratory Data Analysis (EDA)\n",
+    "# Display first few rows, summary statistics, and check for missing values\n",
+    "print(df.head())\n",
+    "print(df.describe())\n",
+    "print(df.isnull().sum())\n",
+    "\n",
+    "# Data Cleaning and Preprocessing\n",
+    "# Encoding categorical variables\n",
+    "df = pd.get_dummies(df, drop_first=True)\n",
+    "\n",
+    "# Splitting the data\n",
+    "X = df.drop('y_yes', axis=1)\n",
+    "y = df['y_yes']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Standardizing the features\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "\n",
+    "# Modeling and Evaluation\n",
+    "\n",
+    "# K-Nearest Neighbors\n",
+    "knn = KNeighborsClassifier()\n",
+    "knn.fit(X_train, y_train)\n",
+    "knn_pred = knn.predict(X_test)\n",
+    "print(\"KNN Accuracy:\", accuracy_score(y_test, knn_pred))\n",
+    "print(\"KNN F1-Score:\", f1_score(y_test, knn_pred))\n",
+    "\n",
+    "# Logistic Regression\n",
+    "log_reg = LogisticRegression(max_iter=1000)\n",
+    "log_reg.fit(X_train, y_train)\n",
+    "log_reg_pred = log_reg.predict(X_test)\n",
+    "print(\"Logistic Regression Accuracy:\", accuracy_score(y_test, log_reg_pred))\n",
+    "print(\"Logistic Regression F1-Score:\", f1_score(y_test, log_reg_pred))\n",
+    "\n",
+    "# Decision Trees\n",
+    "dt = DecisionTreeClassifier()\n",
+    "dt.fit(X_train, y_train)\n",
+    "dt_pred = dt.predict(X_test)\n",
+    "print(\"Decision Tree Accuracy:\", accuracy_score(y_test, dt_pred))\n",
+    "print(\"Decision Tree F1-Score:\", f1_score(y_test, dt_pred))\n",
+    "\n",
+    "# Support Vector Machines\n",
+    "svm = SVC()\n",
+    "svm.fit(X_train, y_train)\n",
+    "svm_pred = svm.predict(X_test)\n",
+    "print(\"SVM Accuracy:\", accuracy_score(y_test, svm_pred))\n",
+    "print(\"SVM F1-Score:\", f1_score(y_test, svm_pred))\n",
+    "\n",
+    "# Comparing Model Performance\n",
+    "models = ['KNN', 'Logistic Regression', 'Decision Tree', 'SVM']\n",
+    "accuracies = [accuracy_score(y_test, knn_pred), accuracy_score(y_test, log_reg_pred), accuracy_score(y_test, dt_pred), accuracy_score(y_test, svm_pred)]\n",
+    "f1_scores = [f1_score(y_test, knn_pred), f1_score(y_test, log_reg_pred), f1_score(y_test, dt_pred), f1_score(y_test, svm_pred)]\n",
+    "\n",
+    "comparison_df = pd.DataFrame({'Model': models, 'Accuracy': accuracies, 'F1-Score': f1_scores})\n",
+    "print(comparison_df)\n",
+    "\n",
+    "# Findings and Recommendations\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
