update code and read me

--- a/practical_17_1.ipynb
+++ b/practical_17_1.ipynb
@@ -17,81 +17,132 @@
     }
    ],
    "source": [
-    "# Importing necessary libraries\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split, cross_val_score\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, confusion_matrix, classification_report\n",
+    "from sklearn.metrics import accuracy_score, f1_score, classification_report\n",
+    "from sklearn.pipeline import Pipeline\n",
     "\n",
-    "# Load the dataset\n",
-    "df = pd.read_csv('bank-full.csv', sep=';')\n",
+    "# Load the data\n",
+    "data = pd.read_csv('bank-full.csv', sep=';')\n",
     "\n",
-    "# Exploratory Data Analysis (EDA)\n",
-    "# Display first few rows, summary statistics, and check for missing values\n",
-    "print(df.head())\n",
-    "print(df.describe())\n",
-    "print(df.isnull().sum())\n",
+    "# Visualizing categorical variables\n",
+    "fig, axes = plt.subplots(nrows=2, ncols=3, figsize=(18, 12))\n",
     "\n",
-    "# Data Cleaning and Preprocessing\n",
-    "# Encoding categorical variables\n",
-    "df = pd.get_dummies(df, drop_first=True)\n",
+    "sns.countplot(x='job', data=data, ax=axes[0, 0])\n",
+    "axes[0, 0].set_title('Job Distribution')\n",
+    "axes[0, 0].set_xticklabels(axes[0, 0].get_xticklabels(), rotation=90)\n",
+    "\n",
+    "sns.countplot(x='marital', data=data, ax=axes[0, 1])\n",
+    "axes[0, 1].set_title('Marital Status Distribution')\n",
+    "\n",
+    "sns.countplot(x='education', data=data, ax=axes[0, 2])\n",
+    "axes[0, 2].set_title('Education Level Distribution')\n",
+    "\n",
+    "sns.countplot(x='housing', data=data, ax=axes[1, 0])\n",
+    "axes[1, 0].set_title('Housing Loan Status')\n",
+    "\n",
+    "sns.countplot(x='loan', data=data, ax=axes[1, 1])\n",
+    "axes[1, 1].set_title('Personal Loan Status')\n",
+    "\n",
+    "sns.countplot(x='y', data=data, ax=axes[1, 2])\n",
+    "axes[1, 2].set_title('Subscription Status')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Visualizing continuous variables\n",
+    "fig, axes = plt.subplots(nrows=2, ncols=2, figsize=(14, 10))\n",
+    "\n",
+    "sns.histplot(data['age'], bins=30, kde=True, ax=axes[0, 0])\n",
+    "axes[0, 0].set_title('Age Distribution')\n",
+    "axes[0, 0].set_xlabel('Age')\n",
+    "\n",
+    "sns.histplot(data['balance'], bins=30, kde=True, ax=axes[0, 1])\n",
+    "axes[0, 1].set_title('Balance Distribution')\n",
+    "axes[0, 1].set_xlabel('Balance')\n",
+    "\n",
+    "sns.histplot(data['duration'], bins=30, kde=True, ax=axes[1, 0])\n",
+    "axes[1, 0].set_title('Duration of Call Distribution')\n",
+    "axes[1, 0].set_xlabel('Duration (seconds)')\n",
+    "\n",
+    "sns.histplot(data['campaign'], bins=30, kde=True, ax=axes[1, 1])\n",
+    "axes[1, 1].set_title('Number of Contacts During Campaign')\n",
+    "axes[1, 1].set_xlabel('Number of Contacts')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Data preprocessing\n",
+    "data['y'] = data['y'].apply(lambda x: 1 if x == 'yes' else 0)\n",
+    "label_encoders = {}\n",
+    "for column in data.select_dtypes(include=['object']).columns:\n",
+    "    label_encoders[column] = LabelEncoder()\n",
+    "    data[column] = label_encoders[column].fit_transform(data[column])\n",
     "\n",
     "# Splitting the data\n",
-    "X = df.drop('y_yes', axis=1)\n",
-    "y = df['y_yes']\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "X = data.drop('y', axis=1)\n",
+    "y = data['y']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
     "\n",
-    "# Standardizing the features\n",
+    "# Standardization\n",
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
     "X_test = scaler.transform(X_test)\n",
     "\n",
-    "# Modeling and Evaluation\n",
+    "# Modeling and evaluation\n",
+    "models = {\n",
+    "    \"KNN\": KNeighborsClassifier(),\n",
+    "    \"Logistic Regression\": LogisticRegression(max_iter=1000),\n",
+    "    \"Decision Tree\": DecisionTreeClassifier(),\n",
+    "    \"SVM\": SVC()\n",
+    "}\n",
     "\n",
-    "# K-Nearest Neighbors\n",
-    "knn = KNeighborsClassifier()\n",
-    "knn.fit(X_train, y_train)\n",
-    "knn_pred = knn.predict(X_test)\n",
-    "print(\"KNN Accuracy:\", accuracy_score(y_test, knn_pred))\n",
-    "print(\"KNN F1-Score:\", f1_score(y_test, knn_pred))\n",
+    "evaluation_metrics = []\n",
     "\n",
-    "# Logistic Regression\n",
-    "log_reg = LogisticRegression(max_iter=1000)\n",
-    "log_reg.fit(X_train, y_train)\n",
-    "log_reg_pred = log_reg.predict(X_test)\n",
-    "print(\"Logistic Regression Accuracy:\", accuracy_score(y_test, log_reg_pred))\n",
-    "print(\"Logistic Regression F1-Score:\", f1_score(y_test, log_reg_pred))\n",
+    "for model_name, model in models.items():\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    \n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "    f1 = f1_score(y_test, y_pred)\n",
+    "    \n",
+    "    evaluation_metrics.append({\n",
+    "        \"Model\": model_name,\n",
+    "        \"Accuracy\": accuracy,\n",
+    "        \"F1-Score\": f1\n",
+    "    })\n",
+    "    \n",
+    "    print(f\"{model_name} Classification Report:\\n\")\n",
+    "    print(classification_report(y_test, y_pred))\n",
+    "    print(\"=\"*60)\n",
     "\n",
-    "# Decision Trees\n",
-    "dt = DecisionTreeClassifier()\n",
-    "dt.fit(X_train, y_train)\n",
-    "dt_pred = dt.predict(X_test)\n",
-    "print(\"Decision Tree Accuracy:\", accuracy_score(y_test, dt_pred))\n",
-    "print(\"Decision Tree F1-Score:\", f1_score(y_test, dt_pred))\n",
+    "# Convert evaluation metrics to DataFrame\n",
+    "evaluation_df = pd.DataFrame(evaluation_metrics)\n",
+    "print(evaluation_df)\n",
     "\n",
-    "# Support Vector Machines\n",
-    "svm = SVC()\n",
-    "svm.fit(X_train, y_train)\n",
-    "svm_pred = svm.predict(X_test)\n",
-    "print(\"SVM Accuracy:\", accuracy_score(y_test, svm_pred))\n",
-    "print(\"SVM F1-Score:\", f1_score(y_test, svm_pred))\n",
+    "# Plotting the evaluation metrics\n",
+    "fig, axes = plt.subplots(nrows=1, ncols=2, figsize=(14, 6))\n",
     "\n",
-    "# Comparing Model Performance\n",
-    "models = ['KNN', 'Logistic Regression', 'Decision Tree', 'SVM']\n",
-    "accuracies = [accuracy_score(y_test, knn_pred), accuracy_score(y_test, log_reg_pred), accuracy_score(y_test, dt_pred), accuracy_score(y_test, svm_pred)]\n",
-    "f1_scores = [f1_score(y_test, knn_pred), f1_score(y_test, log_reg_pred), f1_score(y_test, dt_pred), f1_score(y_test, svm_pred)]\n",
+    "sns.barplot(x='Model', y='Accuracy', data=evaluation_df, ax=axes[0])\n",
+    "axes[0].set_title('Model Accuracy Comparison')\n",
+    "axes[0].set_ylim(0, 1)\n",
     "\n",
-    "comparison_df = pd.DataFrame({'Model': models, 'Accuracy': accuracies, 'F1-Score': f1_scores})\n",
-    "print(comparison_df)\n",
+    "sns.barplot(x='Model', y='F1-Score', data=evaluation_df, ax=axes[1])\n",
+    "axes[1].set_title('Model F1-Score Comparison')\n",
+    "axes[1].set_ylim(0, 1)\n",
     "\n",
-    "# Findings and Recommendations\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
     "\n"
    ]
   }
